crates/stems-cli/tests/snapshots/help__stems_run.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Run a stem or workspace script.

`stems run <stem> <script> [-- args…]` runs a stem's script; `stems run --ws <script> [-- args…]` a
workspace-level script (`--workspace-script` is an alias; `--workspace` stays the global flag that
selects the workspace). Arguments after `--` are validated against the script's `args` schema
(`SCRIPT_ARGS_INVALID`, exit 2) and passed as `--name value` flags plus `STEMS_ARG_<NAME>` env;
scripts without a schema get them untouched. Exit 0 when the script succeeded, else 1
(`SCRIPT_FAILED`). See docs/scripts.md.

Usage: stems run [OPTIONS] [STEM] [SCRIPT] [-- <ARGS>...]

Arguments:
  [STEM]
          Stem whose script to run

  [SCRIPT]
          Script name

  [ARGS]...
          Script arguments (after `--`), e.g. `-- --email a@b.c`

Options:
      --ws <SCRIPT>
          Run a workspace-level script instead of a stem script (`--workspace-script` is an alias)

      --start-deps
          Start the script's `requires:` stems if they are not healthy

      --wait <DURATION>
          How long to wait for the stem while it is still starting (default 30s)

      --no-wait
          Return the run id at once instead of waiting for the script to finish (follow it with
          `stems events -f`)

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
