crates/stems-cli/tests/snapshots/help__stems_status.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Show the state of every stem.

Prints the table STEM TYPE STATUS REASON PID PORTS UPTIME RESTARTS (STATUS is a glyph and the state:
✓ healthy, ! degraded, ✗ failed, · stopped, ? unknown, ↻ transitioning; ASCII OK/WARN/FAIL/-/?/..
with --no-color, STEMS_ASCII=1 or a non-UTF-8 locale) and a summary line. --json gives `{stems,
summary}`. --watch redraws every INTERVAL until Ctrl-C (NDJSON frames with --json).

Usage: stems status [OPTIONS] [STEMS]...

Arguments:
  [STEMS]...
          Only these stems

Options:
      --watch [<INTERVAL>]
          Redraw until Ctrl-C, every INTERVAL (seconds or a duration such as `500ms`; default 1s)

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
